--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app">AAA</div>
-    <script type="module" src="/main.js"></script>
+    <style>
+
+    </style>
+    <div id="app">
+      <div id="ui"></div>
+      <canvas id="game"></canvas>
+    </div>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
